--- a/News Api Project/styles.css
+++ b/News Api Project/styles.css
@@ -1,10 +1,14 @@
-.search{
-	border-style:none;
-	height:200px;
-	width: 800px;
-	align-content: center;
-	padding: 0px;
+body{
+	background-color:#EEEEEE;
 }
+
+h1{
+	color:darkblue;
+}
+h2{
+	color:darkblue;
+}
+
 
 #list1{
 	color:red;
@@ -16,21 +20,27 @@
 li span {
   color: black;
 }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+}
+.search{
+	border-style:none;
+	height:200px;
+	width: 800px;
+	align-content: center;
+	padding: 0px;
+}
 
-h1{
-	color:darkblue;
-}
-h2{
-	color:darkblue;
-}
 
 .but0{
 	border-color: #337ab7;
 	color:#777;
 	border-style:none;
 	width:150px;
-	padding: 15px 15px;
-	font-size: 15px;
+	padding: 15px 10px;
+	font-size: 13px;
 
 	text-align: center;
 	background-color: transparent;
